--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="index-content">
       <h1>{{ site.name }}</h1>
-      <p>{{ site.description }}</p>
+      <p style="font-family:Matura MT Script Capitals;">{{ site.description }}</p>
       <div class="index-contact">
         <p>
           {% if site.twitter %}
