--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -12,7 +12,7 @@ body {
   min-height: 100vh;
   margin: 0;
 
-  background: #f0f0f0;
+  background: #7cc3ec;
 }
 
 a {
@@ -23,7 +23,7 @@ a {
   position: relative;
   bottom: -95px;
 
-  border: #f0f0f0 solid 20px;
+  border: #7cc3ec solid 20px;
   border-radius: 50%;
   width: 150px;
   height: 150px;
