--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -4,25 +4,25 @@ html {
 }
 
 ::-webkit-selection {
-  background: #fffac4;
+  background: #81bde0;
   color: #111;
   text-shadow: none;
 }
 
 ::-moz-selection {
-  background: #fffac4;
+  background: #81bde0;
   color: #111;
   text-shadow: none;
 }
 
 ::-ms-selection {
-  background: #fffac4;
+  background: #81bde0;
   color: #111;
   text-shadow: none;
 }
 
 ::selection {
-  background: #fffac4;
+  background: #81bde0;
   color: #111;
   text-shadow: none;
 }
@@ -222,7 +222,7 @@ header {
 
   a:hover {
     color: #111;
-    border-bottom: 2px solid #ffea00;
+    border-bottom: 2px solid #1976D2;
   }
 }
 
@@ -322,7 +322,7 @@ ul[class="gitment-comments-list"] li {
     font-size: 1.5em;
     line-height: 50px;
     text-align: center;
-    background: #FFD740;
+    background: #1976D2;
   }
 }
 
@@ -413,7 +413,7 @@ footer {
 
   a:hover {
     color: #111;
-    border-bottom: 2px solid #ffea00;
+    border-bottom: 2px solid #1976D2;
   }
 }
 
